Fix overflow problem

--- a/src/app/store/product/product.component.css
+++ b/src/app/store/product/product.component.css
@@ -38,7 +38,7 @@ swiper{
 }
 
 .slider-slide-container{
-
+    overflow: hidden !important;
 }
 
 .slide-wrapper{
